--- a/src/app/features/auth/signup-page/_form-elements.scss
+++ b/src/app/features/auth/signup-page/_form-elements.scss
@@ -27,7 +27,7 @@
   }
 
   .error-wrap {
-    min-height: auto;
+    min-height: 20px;
   }
 
   .error {
