--- a/src/app/features/contacts/components/contact-form-dialog/contact-form-dialog.scss
+++ b/src/app/features/contacts/components/contact-form-dialog/contact-form-dialog.scss
@@ -221,6 +221,7 @@
 .form-group {
   margin-bottom: 16px;
   width: 100%;
+  min-height: 68px;
   position: relative;
 
   input {
